--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.13.1",
     "moment": "^2.23.0",
     "node-sass": "4.5.0",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
     "eslint": "3.15.0",
