--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.23.0",
     "node-sass": "4.5.0",
     "node-sass-middleware": "0.11.0",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "stripe": "^6.20.0"
   },
   "devDependencies": {
     "eslint": "3.15.0",
